--- a/app/src/main/res/layout/fragment_about_me.xml
+++ b/app/src/main/res/layout/fragment_about_me.xml
@@ -16,11 +16,11 @@
 
         <TextView
             android:id="@+id/tv_full_name"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Name"
-            android:textSize="16pt" />
+            android:text="Name" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -29,11 +29,11 @@
 
         <TextView
             android:id="@+id/tv_position"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Position"
-            android:textSize="14pt" />
+            android:text="Position" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -42,11 +42,11 @@
 
         <TextView
             android:id="@+id/tv_birth_date"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Birth Date"
-            android:textSize="12pt" />
+            android:text="Birth Date" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -55,11 +55,11 @@
 
         <TextView
             android:id="@+id/tv_nationality"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Nationality"
-            android:textSize="12pt" />
+            android:text="Nationality" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -68,11 +68,11 @@
 
         <TextView
             android:id="@+id/tv_martial_state"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Martial State"
-            android:textSize="12pt" />
+            android:text="Martial State" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -81,11 +81,11 @@
 
         <TextView
             android:id="@+id/tv_address"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Address"
-            android:textSize="12pt" />
+            android:text="Address" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,11 +94,11 @@
 
         <TextView
             android:id="@+id/tv_personal_statement"
+            style="@android:style/TextAppearance.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Personal Statement"
-            android:textSize="12pt" />
+            android:text="Personal Statement" />
 
     </LinearLayout>
 
