--- a/app/src/main/res/layout/cell_languages.xml
+++ b/app/src/main/res/layout/cell_languages.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_image"
-        android:layout_width="125dip"
-        android:layout_height="125dip"
-        android:src="@drawable/ic_menu_gallery"/>
+    <com.shahinjo.thingy.shahinportfolio.CustomViews.DoughnutView
+        android:id="@+id/doughnut"
+        android:layout_width="128dip"
+        android:layout_height="128dip"
+        app:fdColorPrimary="@android:color/holo_blue_dark" />
+
 
     <TextView
         android:id="@+id/tv_name"
         style="@android:style/TextAppearance.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Text"/>
+        android:text="Text" />
 
 </LinearLayout>
