--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <GridView
-        android:id="@+id/grid_projects"
+    <ListView
+        android:id="@+id/list_projects"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnOrderPreserved="true"
-        android:rowOrderPreserved="true"
-        android:overScrollMode="ifContentScrolls"
-        android:numColumns="2">
+        android:layout_height="match_parent">
 
-    </GridView>
+    </ListView>
 
 </LinearLayout>
