--- a/app/src/main/res/layout/cell_languages.xml
+++ b/app/src/main/res/layout/cell_languages.xml
@@ -18,6 +18,7 @@
         style="@android:style/TextAppearance.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Text" />
+        android:text="Text"
+        android:textColor="@color/colorPrimary" />
 
 </LinearLayout>
