--- a/app/src/main/res/layout/item_education_timeline.xml
+++ b/app/src/main/res/layout/item_education_timeline.xml
@@ -30,28 +30,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginBottom="10dip"
                 android:layout_marginLeft="20dp"
-                android:text="Period" />
+                android:text="Period"
+                android:textColor="@color/colorPrimary" />
 
             <TextView
                 android:id="@+id/tv_major_and_degree"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginBottom="10dip"
                 android:layout_marginLeft="20dp"
-                android:text="Major and Degree" />
+                android:text="Major and Degree"
+                android:textColor="@color/colorPrimary" />
 
             <TextView
                 android:id="@+id/tv_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginBottom="10dip"
                 android:layout_marginLeft="20dp"
-                android:text="Location" />
+                android:text="Location"
+                android:textColor="@color/colorPrimary" />
 
         </LinearLayout>
-
-
 
 
     </android.support.v7.widget.CardView>
