--- a/app/src/main/res/layout/cell_work_experience.xml
+++ b/app/src/main/res/layout/cell_work_experience.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dip"
     android:gravity="center"
     android:orientation="horizontal">
 
@@ -11,11 +12,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
-        android:textSize="64pt" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="48pt" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dip"
+        android:layout_marginTop="10dip"
         android:orientation="vertical">
 
         <TextView
@@ -23,21 +27,27 @@
             style="@android:style/TextAppearance.Medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="position" />
+            android:layout_marginBottom="5dip"
+            android:text="position"
+            android:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/tv_period"
             style="@android:style/TextAppearance.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="period" />
+            android:layout_marginBottom="5dip"
+            android:text="period"
+            android:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/tv_location"
             style="@android:style/TextAppearance.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="location" />
+            android:layout_marginBottom="5dip"
+            android:text="location"
+            android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
 
