--- a/app/src/main/res/layout/fragment_my_specialities.xml
+++ b/app/src/main/res/layout/fragment_my_specialities.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <GridView
         android:id="@+id/grid_my_specialities"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:columnOrderPreserved="true"
-        android:rowOrderPreserved="true"
+        android:numColumns="2"
         android:overScrollMode="ifContentScrolls"
-        android:numColumns="2">
+        android:rowOrderPreserved="true">
 
     </GridView>
 
