--- a/app/src/main/res/layout/item_education_timeline_horizontal.xml
+++ b/app/src/main/res/layout/item_education_timeline_horizontal.xml
@@ -16,7 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Random" />
+            android:text="Random"
+            android:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/tv_major_and_degree"
@@ -24,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Random" />
+            android:text="Random"
+            android:textColor="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/tv_location"
@@ -32,7 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Random" />
+            android:text="Random"
+            android:textColor="@color/colorPrimary" />
 
 
     </android.support.v7.widget.CardView>
