--- a/app/src/main/res/layout/row_skill.xml
+++ b/app/src/main/res/layout/row_skill.xml
@@ -8,7 +8,8 @@
         android:id="@+id/tv_skill"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Skill Name" />
+        android:text="Skill Name"
+        android:textColor="@color/colorPrimary" />
 
     <RatingBar
         android:id="@+id/ratingBar"
