--- a/app/src/main/res/layout/row_project.xml
+++ b/app/src/main/res/layout/row_project.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fresco="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:paddingBottom="10dip"
     android:paddingTop="10dip">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/iv_image"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_centerHorizontal="true"
+        fresco:placeholderImage="@drawable/myPlaceholderImage" />
+
+    <!--<ImageView
         android:id="@+id/iv_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dip"
-        app:srcCompat="@drawable/ic_profile_picture" />
+        app:srcCompat="@drawable/ic_profile_picture" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
