--- a/app/src/main/res/layout/cell_hobbies_and_interests.xml
+++ b/app/src/main/res/layout/cell_hobbies_and_interests.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fresco="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -9,10 +9,10 @@
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_image"
-        android:layout_width="125dip"
-        android:layout_height="125dip"
+        android:layout_width="96dip"
+        android:layout_height="96dip"
         android:layout_centerHorizontal="true"
-        fresco:placeholderImage="@drawable/myPlaceholderImage" />
+        fresco:actualImageScaleType="fitCenter" />
 
     <!--<ImageView
         android:id="@+id/iv_image"
