--- a/app/src/main/res/layout/cell_work_experience.xml
+++ b/app/src/main/res/layout/cell_work_experience.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dip"
+    android:layout_marginLeft="10dip"
+    android:layout_marginRight="10dip"
+
     android:gravity="center"
     android:orientation="horizontal">
 
@@ -11,14 +13,23 @@
         style="@android:style/TextAppearance.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dip"
         android:text="1"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="48pt" />
+
+    <!--<LinearLayout
+        android:layout_width="2dip"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dip"
+        android:layout_marginTop="20dip"
+        android:layout_marginLeft="10dip"
+        android:background="@color/colorAccent" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"
+        android:layout_marginBottom="10dip"
         android:layout_marginTop="10dip"
         android:orientation="vertical">
 
@@ -50,5 +61,6 @@
             android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
+
 
 </LinearLayout>
