--- a/app/src/main/res/layout/fragment_languages.xml
+++ b/app/src/main/res/layout/fragment_languages.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <GridView
-        android:id="@+id/grid_languages"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnOrderPreserved="true"
-        android:numColumns="2"
-        android:overScrollMode="ifContentScrolls"
-        android:rowOrderPreserved="true">
+        android:orientation="vertical">
 
-    </GridView>
+        <GridView
+            android:id="@+id/grid_languages"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:columnOrderPreserved="true"
+            android:numColumns="2"
+            android:overScrollMode="ifContentScrolls"
+            android:rowOrderPreserved="true">
 
-</LinearLayout>
+        </GridView>
+
+    </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
