--- a/app/src/main/res/layout/row_project.xml
+++ b/app/src/main/res/layout/row_project.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fresco="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -10,10 +9,11 @@
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_image"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
+        android:layout_width="96dip"
+        android:layout_height="96dip"
         android:layout_centerHorizontal="true"
-        fresco:placeholderImage="@drawable/myPlaceholderImage" />
+        android:layout_margin="15dip"
+        fresco:actualImageScaleType="fitCenter" />
 
     <!--<ImageView
         android:id="@+id/iv_image"
