--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,12 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#C5CAE9</color>
 
     <color name="orange">#FF8C50</color>
     <color name="red">#FF2350</color>
     <color name="lightgrey">#C8C8C8</color>
+    <color name="pink">#FF4081</color>
+    <color name="darkBlue">#303F9F</color>
+    <color name="blue">#3F51B5</color>
 </resources>
