--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,84 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipe_container"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <RelativeLayout
-        android:id="@+id/main_layout"
+        android:id="@+id/header_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        android:padding="10dip">
 
 
-        <RelativeLayout
-            android:id="@+id/header_layout"
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/iv_profile_picture"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            fresco:roundAsCircle="true"
+            fresco:roundBottomLeft="false"
+            fresco:roundBottomRight="false"
+            fresco:roundedCornerRadius="5dp"
+            fresco:roundingBorderColor="@color/colorAccent"
+            fresco:roundingBorderWidth="1dp" />
+
+        <!--<ImageView
+            android:id="@+id/iv_profile_picture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/ic_profile_picture" />-->
+
+        <TextView
+            android:id="@+id/tv_name"
+            style="@android:style/TextAppearance.Large"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:background="?attr/colorPrimary"
-            android:elevation="6dp"
-            android:padding="10dip">
+            android:layout_below="@+id/iv_profile_picture"
+            android:gravity="center"
+            android:text="Name"
+            android:textColor="#FFFFFF" />
 
-
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/iv_profile_picture"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center"
-                fresco:roundAsCircle="true"
-                fresco:roundBottomLeft="false"
-                fresco:roundBottomRight="false"
-                fresco:roundedCornerRadius="5dp"
-                fresco:roundingBorderColor="@color/colorAccent"
-                fresco:roundingBorderWidth="1dp" />
-
-            <!--<ImageView
-                android:id="@+id/iv_profile_picture"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                app:srcCompat="@drawable/ic_profile_picture" />-->
-
-            <TextView
-                android:id="@+id/tv_name"
-                style="@android:style/TextAppearance.Large"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/iv_profile_picture"
-                android:gravity="center"
-                android:text="Name"
-                android:textColor="#FFFFFF" />
-
-            <TextView
-                android:id="@+id/tv_position"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_name"
-                android:gravity="center"
-                android:text="Position"
-                android:textColor="#FFFFFF" />
-
-
-        </RelativeLayout>
-
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
+        <TextView
+            android:id="@+id/tv_position"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/header_layout"
-            android:background="?attr/colorPrimary"
-            android:elevation="6dp"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+            android:layout_below="@+id/tv_name"
+            android:gravity="center"
+            android:text="Position"
+            android:textColor="#FFFFFF" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_below="@id/tab_layout" />
 
     </RelativeLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
+
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/header_layout"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/tab_layout" />
+
+</RelativeLayout>
