--- a/app/src/main/res/layout/fragment_album_images.xml
+++ b/app/src/main/res/layout/fragment_album_images.xml
@@ -4,13 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <ListView
-        android:id="@+id/list_skills"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/image_gallery"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null">
-
-    </ListView>
+        android:layout_height="match_parent" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
