--- a/app/src/main/res/layout/fragment_contact_information.xml
+++ b/app/src/main/res/layout/fragment_contact_information.xml
@@ -3,6 +3,7 @@
     android:id="@+id/lv_contacting_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:divider="@null"
     android:orientation="vertical">
 
 
